# dlthub-education

./: .gitignore  README.md  requirements_github_action.txt
courses/orchestrator_course/Dagster/deploy-locally/: pyproject.toml
courses/orchestrator_course/Dagster/deploy-to-cloud-with-dagster-serverless/: dagster_cloud.yaml  pyproject.toml
courses/orchestrator_course/Dagster/deploy-to-cloud-with-dagster-serverless/.github/workflows/: branch_deployments.yml  deploy.yml
courses/orchestrator_course/Dagster/deploy-to-cloud-with-dagster-serverless/dagster_quickstart/: definitions.py
courses/orchestrator_course/Dagster/deploy-to-cloud-with-dagster-serverless/dagster_quickstart/defs/: assets.py  assets_parallel.py  dagster_pipeline.py
workshops/deep_dive_dagster/dlt-dagster-integration-parallel-pipeline/: pyproject.toml
workshops/deep_dive_dagster/dlt-dagster-integration-parallel-pipeline/dlt_dagster_integration_parallel_pipeline/: definitions.py
workshops/deep_dive_dagster/dlt-dagster-integration-parallel-pipeline/dlt_dagster_integration_parallel_pipeline/defs/: assets.py  jaffle_shop_source.py
workshops/demo_dagster/dlt-dagster-integration-sequential-pipeline/: README.md  pyproject.toml  setup.cfg  setup.py
workshops/demo_dagster/dlt-dagster-integration-sequential-pipeline/.tmp_dagster_home_69wanihi/history/: runs.db
workshops/demo_dagster/dlt-dagster-integration-sequential-pipeline/.tmp_dagster_home_69wanihi/history/runs/: 1d42565a-3f3b-47ed-a512-95cc857b6b9a.db  index.db
workshops/demo_dagster/dlt-dagster-integration-sequential-pipeline/.tmp_dagster_home_69wanihi/schedules/: schedules.db
workshops/demo_dagster/dlt-dagster-integration-sequential-pipeline/.tmp_dagster_home_9x1vufjh/history/: runs.db
workshops/demo_dagster/dlt-dagster-integration-sequential-pipeline/.tmp_dagster_home_9x1vufjh/history/runs/: 1939cc8a-d1b1-46d3-ae83-17fb7a53d0f0.db  index.db
workshops/demo_dagster/dlt-dagster-integration-sequential-pipeline/.tmp_dagster_home_9x1vufjh/schedules/: schedules.db
workshops/demo_dagster/dlt-dagster-integration-sequential-pipeline/.tmp_dagster_home_ktat4_mi/history/: runs.db
workshops/demo_dagster/dlt-dagster-integration-sequential-pipeline/.tmp_dagster_home_ktat4_mi/schedules/: schedules.db
workshops/demo_dagster/dlt-dagster-integration-sequential-pipeline/.tmp_dagster_home_o3e98svp/history/: runs.db
workshops/demo_dagster/dlt-dagster-integration-sequential-pipeline/.tmp_dagster_home_o3e98svp/schedules/: schedules.db
workshops/demo_dagster/dlt-dagster-integration-sequential-pipeline/dlt_dagster_integration_sequential_pipeline/: assets.py  definitions.py  jaffle_shop_bigquery_pipeline.py  jaffle_shop_source_config.py
(+338 files in other folders)
