[project]
name = "dlt_dagster_integration_parallel_pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster==1.11.1",
    "dagster-dlt>=0.27.1",
    "dlt[bigquery,duckdb]>=1.12.1",
    "pandas>=2.3.0",
    "dagster-webserver",
    "dagster-dg-cli[local]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dlt_dagster_integration_parallel_pipeline"
registry_modules = [
    "dlt_dagster_integration_parallel_pipeline.*",
]
