[project]
name = "dlt_dagster_integration_sequential_pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dlt_dagster_integration_sequential_pipeline.definitions"
code_location_name = "dlt_dagster_integration_sequential_pipeline"

[tool.setuptools.packages.find]
exclude=["dlt_dagster_integration_sequential_pipeline_tests"]
