[project]
name="dagster_quickstart"
version="0.1.0"
requires-python=">=3.9, <3.14"
dependencies=[
    "dagster==1.11.11",
    "dagster-cloud",
    "dagster-dlt",
    "dagster-embedded-elt>=0.27.11",
    "dlt[bigquery]"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_quickstart.definitions"
code_location_name = "dagster_quickstart"